@@ -1,0 +1,1 @@
+create table full_table_parquet using parquet as select * from default.lineitem;
