@@ -1,0 +1,1 @@
+create table table1 (col1 int4, col2 int4, col3 float8)
