@@ -1,0 +1,1 @@
+insert overwrite into table1 select l_orderkey from default.lineitem;
