@@ -1,0 +1,4 @@
+l_orderkey,l_partkey
+-------------------------------
+3,2
+3,3
